// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack Integration Tests chunk-modules-css-wrong-order 1`] = `
".block {
  color: tomato;
}
.App {
  color: black;
}
"
`;

exports[`Webpack Integration Tests chunk-modules-nested-ordered-by-id 1`] = `
"body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}
.block {
	color: tomato;
}
.App {
	color: black;
}
"
`;

exports[`Webpack Integration Tests chunk-modules-ordered-by-id 1`] = `
".block {
	color: tomato;
}
.App {
	color: black;
}
"
`;

exports[`Webpack Integration Tests common-async 1`] = `
"a
b
c
"
`;

exports[`Webpack Integration Tests merging-chunk 1`] = `
"a
b
c
"
`;

exports[`Webpack Integration Tests merging-multiple-entries 1`] = `
"a
b
"
`;

exports[`Webpack Integration Tests merging-multiple-entries 2`] = `
"a
c
"
`;

exports[`Webpack Integration Tests merging-multiple-entries-shared 1`] = `
"a
"
`;

exports[`Webpack Integration Tests merging-multiple-entries-shared 2`] = `
"a
"
`;

exports[`Webpack Integration Tests multiple-entries 1`] = `
"a
b
"
`;

exports[`Webpack Integration Tests multiple-entries 2`] = `
"a
c
"
`;

exports[`Webpack Integration Tests multiple-entries-all-async 1`] = `
"webpackJsonp([0],{

/***/ 1:
/***/ (function(module, exports, __webpack_require__) {

__webpack_require__(7);

modules.export = function() {
	return 'Route Homepage';
};


/***/ }),

/***/ 7:
/***/ (function(module, exports) {

// removed by extract-text-webpack-plugin

/***/ })

});"
`;

exports[`Webpack Integration Tests multiple-entries-all-async 2`] = `
"webpackJsonp([1],{

/***/ 0:
/***/ (function(module, exports, __webpack_require__) {

__webpack_require__(6);

modules.export = function() {
	return 'Route Contact';
};


/***/ }),

/***/ 6:
/***/ (function(module, exports) {

// removed by extract-text-webpack-plugin

/***/ })

});"
`;

exports[`Webpack Integration Tests multiple-entries-all-async 3`] = `
"body {
	background: red;
}
.contact {
	color: black;
}
.homepage {
	color: black;
}
"
`;

exports[`Webpack Integration Tests multiple-entries-all-async 4`] = `
"body {
	background: red;
}
.contact {
	color: black;
}
.homepage {
	color: black;
}
"
`;

exports[`Webpack Integration Tests multiple-entries-async 1`] = `
"webpackJsonp([0],{

/***/ 12:
/***/ (function(module, exports, __webpack_require__) {

// style-loader: Adds some css to the DOM by adding a <style> tag

// load the styles
var content = __webpack_require__(13);
if(typeof content === 'string') content = [[module.i, content, '']];
// Prepare cssTransformation
var transform;

var options = {}
options.transform = transform
// add the styles to the DOM
var update = __webpack_require__(1)(content, options);
if(content.locals) module.exports = content.locals;
// Hot Module Replacement
if(false) {
	// When the styles change, update the <style> tags
	if(!content.locals) {
		module.hot.accept(\\"!!../../../../../node_modules/css-loader/index.js??ref--0-2!./styles.css\\", function() {
			var newContent = require(\\"!!../../../../../node_modules/css-loader/index.js??ref--0-2!./styles.css\\");
			if(typeof newContent === 'string') newContent = [[module.id, newContent, '']];
			update(newContent);
		});
	}
	// When the module is disposed, remove the <style> tags
	module.hot.dispose(function() { update(); });
}

/***/ }),

/***/ 13:
/***/ (function(module, exports, __webpack_require__) {

exports = module.exports = __webpack_require__(0)(false);
// imports


// module
exports.push([module.i, \\".homepage {\\\\n\\\\tcolor: yellow;\\\\n}\\\\n\\", \\"\\"]);

// exports


/***/ }),

/***/ 3:
/***/ (function(module, exports, __webpack_require__) {

__webpack_require__(12);

modules.export = function() {
	return 'Route Homepage';
};


/***/ })

});"
`;

exports[`Webpack Integration Tests multiple-entries-async 2`] = `
"webpackJsonp([1],{

/***/ 10:
/***/ (function(module, exports, __webpack_require__) {

// style-loader: Adds some css to the DOM by adding a <style> tag

// load the styles
var content = __webpack_require__(11);
if(typeof content === 'string') content = [[module.i, content, '']];
// Prepare cssTransformation
var transform;

var options = {}
options.transform = transform
// add the styles to the DOM
var update = __webpack_require__(1)(content, options);
if(content.locals) module.exports = content.locals;
// Hot Module Replacement
if(false) {
	// When the styles change, update the <style> tags
	if(!content.locals) {
		module.hot.accept(\\"!!../../../../../node_modules/css-loader/index.js??ref--0-2!./styles.css\\", function() {
			var newContent = require(\\"!!../../../../../node_modules/css-loader/index.js??ref--0-2!./styles.css\\");
			if(typeof newContent === 'string') newContent = [[module.id, newContent, '']];
			update(newContent);
		});
	}
	// When the module is disposed, remove the <style> tags
	module.hot.dispose(function() { update(); });
}

/***/ }),

/***/ 11:
/***/ (function(module, exports, __webpack_require__) {

exports = module.exports = __webpack_require__(0)(false);
// imports


// module
exports.push([module.i, \\".contact {\\\\n\\\\tcolor: black;\\\\n}\\\\n\\", \\"\\"]);

// exports


/***/ }),

/***/ 2:
/***/ (function(module, exports, __webpack_require__) {

__webpack_require__(10);

modules.export = function() {
	return 'Route Contact';
};


/***/ })

});"
`;

exports[`Webpack Integration Tests multiple-entries-async 3`] = `
"body {
	background: red;
}
.contact {
	color: black;
}
"
`;

exports[`Webpack Integration Tests multiple-entries-async 4`] = `
"body {
	background: red;
}
.homepage {
	color: yellow;
}
"
`;

exports[`Webpack Integration Tests multiple-entries-filename 1`] = `
"a
b
"
`;

exports[`Webpack Integration Tests multiple-entries-filename 2`] = `
"a
c
"
`;

exports[`Webpack Integration Tests multiple-entries-filename 3`] = `""`;

exports[`Webpack Integration Tests nested 1`] = `
"a
b
c
d
"
`;

exports[`Webpack Integration Tests optimize-tree 1`] = `
"index
a
b
"
`;

exports[`Webpack Integration Tests order-undefined-error 1`] = `
"._3QiTkN7JPds2C9Bq73MpOX {
}
._3dtwYD12yqGZUJ-uPQLu9z {
}
._32HVXkGocfWZMaHoXEFkED {
}
.hbZI7DlQBB9VYNCgL20kL {
}
"
`;

exports[`Webpack Integration Tests simple 1`] = `
"a
b
"
`;

exports[`Webpack Integration Tests simple-query-object 1`] = `
"body {
	correct: a;
}
body {
	correct: b;
}

/*# sourceMappingURL=file.css.map*/"
`;

exports[`Webpack Integration Tests simple-queryless-object 1`] = `
"body {
	correct: a;
}
body {
	correct: b;
}

/*# sourceMappingURL=file.css.map*/"
`;

exports[`Webpack Integration Tests splitted-chunk 1`] = `
"a
"
`;

exports[`Webpack Integration Tests splitted-multiple-entries 1`] = `""`;

exports[`Webpack Integration Tests splitted-multiple-entries 2`] = `""`;

exports[`Webpack Integration Tests string-export-with-optimize-module-order 1`] = `
"a
b
"
`;
